# SocraticNovel-software

./: .gitignore  Architecture.md  PROJECT_STATUS.md  README.md  SYNC_GUIDE.md  package-lock.json  package.json  research.md  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build-release.yml
docs/: AI_SUBSYSTEM.md  CLAUDE_CODE_RESEARCH.md  ONBOARDING.md  README.md  agent-team-workflow.md  research_ai_manim_edtech.md  sandbox-format.md
public/protocols/animatutor/: meta_prompt_v2.3.md
public/protocols/yuuki-alpha/: 00_系统规则.md  01_世界观与序章.md  02_角色设定.md  03_学科场景机制.md  04a_故事线·第一章.md  04b_故事线·第二章.md  04c_故事线·第三章.md  04d_故事线·第四章.md  05_终章.md  06_状态追踪模板.md  07_角色记忆.md  BOOT.md
scripts/: apple_ocr.swift  download-pdfium.sh  install.sh  test_canvas_e2e.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: cli_practice.rs  cli_test_runner.rs  dev_test.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: claude.rs  client.rs  meta_prompt.md  mod.rs  openai.rs  prompt.rs  runtime.rs  tools.rs  types.rs
src-tauri/src/commands/: ai_commands.rs  codex_oauth_commands.rs  credential_store.rs  fs_commands.rs  history_commands.rs  mod.rs  oauth_commands.rs  pdf_commands.rs  review_commands.rs  settings_commands.rs
src-tauri/tests/: canvas_tests.rs  e2e_flow.rs  pdf_integration.rs
src-tauri/tests/codex_oauth/: ac3_pkce_memory.rs  ac4_pkce_single_use.rs  ac5_pkce_timeout.rs  ac6_token_storage.rs  ac7_expires_at.rs  ac8_oauth_flow.rs  exceptions.rs  mod.rs
src-tauri/tests/mod/: mock_oauth_server.rs  mod.rs  test_utils.rs
src/components/canvas/: AnnotationLayer.tsx  CanvasPanel.tsx  CanvasToolbar.tsx  InteractiveCanvas.tsx  MermaidEditor.tsx  MermaidRenderer.tsx  SandboxErrorBoundary.tsx  SandboxedHTMLCanvas.tsx
src/components/chat/: ChatInput.tsx  ChatMessageBubble.tsx
src/components/debug/: AgentLogPanel.tsx
src/components/layout/: ChapterOutline.tsx
src/components/metaprompt/: QuestionnaireWizard.tsx  StepCharacters.tsx  StepReview.tsx  StepStory.tsx  StepSubject.tsx  StepWorld.tsx  StepWorldChat.tsx
src/data/: characterPresets.ts
src/hooks/: useAiAgent.ts
src/i18n/: index.ts
src/lib/: ai.ts  curriculumParser.ts  customProvider.test.ts  customProvider.ts  mermaidAnimation.ts  mermaidInit.ts  notesTemplates.ts  providerConfig.ts  providerModels.test.ts  providerModels.ts  questionnaireSerializer.ts  sanitizeMarkdown.ts  tauri.ts
src/pages/: DemoCanvasPage.tsx  HistoryPage.tsx  LandingPage.tsx  LandingPageCardVariant.tsx  LandingPageInputVariant.tsx  LessonPage.tsx  MetaPromptPage.tsx  NotesPage.tsx  PdfImportPage.tsx  PracticePage.tsx  ProgressPage.tsx  ReviewPage.tsx  SettingsPage.tsx  SetupWizardPage.tsx
src/stores/: appStore.ts
src/styles/: canvas-animation.css
src/types/: index.ts  sandbox.ts
(+2 files in other folders)
