[package]
name = "socratic-novel"
version = "0.1.0"
description = "SocraticNovel — Immersive AI Tutoring Desktop App"
authors = ["SocraticNovel"]
edition = "2021"

[lib]
name = "socratic_novel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"
tauri-plugin-store = "2.4.2"

