[package]
name = "socratic-novel"
version = "0.1.0"
description = "SocraticNovel — Immersive AI Tutoring Desktop App"
authors = ["SocraticNovel"]
edition = "2021"
default-run = "socratic-novel"

[lib]
name = "socratic_novel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dev_test"
path = "src/bin/dev_test.rs"

[[bin]]
name = "cli_practice"
path = "src/bin/cli_practice.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"
tauri-plugin-store = "2.4.2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.10"
tauri-plugin-dialog = "2"
base64 = "0.22"

