[package]
name = "socratic-novel"
version = "0.3.1"
description = "SocraticNovel — Immersive AI Tutoring Desktop App"
authors = ["SocraticNovel"]
edition = "2021"
default-run = "socratic-novel"

[lib]
name = "socratic_novel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dev_test"
path = "src/bin/dev_test.rs"
required-features = ["dev-tools"]

[[bin]]
name = "cli_practice"
path = "src/bin/cli_practice.rs"
required-features = ["dev-tools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
dev-tools = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"
tauri-plugin-store = "2.4.2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.10"
tauri-plugin-dialog = "2"
base64 = "0.22"
pdfium-render = "0.8"
image = "0.25"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zip = "2"

